--- a/Rails/Eshopper3/app/views/cart_items/index.html.erb
+++ b/Rails/Eshopper3/app/views/cart_items/index.html.erb
@@ -149,7 +149,15 @@
           <ul>
             <li>Cart Sub Total <span id="cart_sub_total">&#8377; <%= @cart_items_total %></span></li>
             <li>VAT<span id="vat">&#8377; <%= @vat %></span></li>
-            <li>Shipping Cost <span>Free</span></li>
+            <li>Shipping Cost 
+              <span id="shipping-cost">
+                <% if @cart_items_total<500%>
+                  &#8377; <%= @shipping_cost %>
+                <% else %>
+                  <%= @shipping_cost %>
+                <% end %>
+              </span>
+            </li>
             <li>Total <span id="cart_total">&#8377; <%= @grand_total %></span></li>
           </ul>
             <%= link_to 'Update', '#', class: "btn btn-default update" %>
