--- a/Rails/Eshopper3/app/views/cart_items/update.js.erb
+++ b/Rails/Eshopper3/app/views/cart_items/update.js.erb
@@ -5,4 +5,10 @@ $('#vat').html('&#8377; <%= @vat%>')
 $('#cart_sub_total').html('&#8377; <%= @cart_items_total%>')
 $('#cart_total').html('&#8377; <%= @grand_total%>')
 
+<% if @cart_items_total < 500 %>
+  $('#shipping-cost').html('&#8377; <%= @shipping_cost%>')
+<% else %>
+  $('#shipping-cost').html('Free')
+<% end %>
+
 
